--- a/themes/cactus/languages/en.yml
+++ b/themes/cactus/languages/en.yml
@@ -11,7 +11,7 @@ footer:
   copyright: Copyright
 
 index:
-  find_me_on: Find me on
+  find_me_on: Contact m through email: 
   enum_comma: ','
   enum_and: and
   articles: Writing
